Fixed Timeline line on iPhone

--- a/src/components/Timeline.css
+++ b/src/components/Timeline.css
@@ -19,10 +19,12 @@
 .timeline-line-active {
   position: absolute;
   top: 0;
+  bottom: 0;
   left: 22px;
   width: 2px;
   background-color: #dc1f2e;
-  transition: height 0.1s linear;
+  transform-origin: top;
+  will-change: transform;
 }
 
 /* Timeline Item */
